mise en place des photos bg

--- a/src/components/CertificationCard.astro
+++ b/src/components/CertificationCard.astro
@@ -11,7 +11,7 @@ const { cert } = Astro.props;
     md:w-96 md:h-[28rem]         /* DESKTOP : tes dimensions ORIGINALES */
     relative 
     h-[24rem] sm:h-[26rem]       /* mobile/tablette : hauteur adaptée */
-    bg-[--bg-light] dark:bg-[--bg-secondary-dark]
+    text-center
   "
   data-aos="flip-left"
   data-aos-easing="ease-out-cubic"
