--- a/src/components/ReviewCard.astro
+++ b/src/components/ReviewCard.astro
@@ -49,15 +49,17 @@ if (source === "google") {
   data-aos-delay="200"
   data-aos-duration="900"
   data-aos-easing="cubic-bezier(.21,.98,.6,1)"
-  class="p-6 rounded-xl shadow-lg bg-[--bg-light] dark:bg-[--bg-secondary-dark]
+  class="p-6 rounded-xl shadow-lg glass
          border border-gray-200 dark:border-gray-700"
 >
-  <div class="flex items-center justify-self-center gap-4 mb-4">
+  <div class="flex items-center justify-self-center text-center gap-4 mb-4">
     {
       hasAvatar ? (
-        <img
+        <Image
           src={review.image}
           alt={review.author}
+          width={50}
+          height={50}
           class="w-14 h-14 rounded-full object-cover border"
           loading="lazy"
         />
@@ -72,13 +74,12 @@ if (source === "google") {
       )
     }
 
-    <div>
+    <div class="">
       <h3 class="text-lg font-bold text-gray-800 dark:text-white">
         {review.author}
       </h3>
       <p class="text-sm text-gray-500 dark:text-gray-400">{review.role}</p>
 
-      <div class="flex items-center gap-2 mt-1" set:html={sourceIcon} />
     </div>
   </div>
 
@@ -92,10 +93,11 @@ if (source === "google") {
     )
   }
 
-  <p class="text-gray-700 dark:text-gray-300 leading-relaxed mb-4">
+  <p class="text-gray-700 text-center dark:text-gray-300 leading-relaxed mb-4">
     {review.content}
   </p>
 
+  <div class="flex justify-center gap-2 mt-1" set:html={sourceIcon} />
   <p class="text-sm justify-self-center text-gray-400">
     {date}
   </p>
