--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -3,11 +3,11 @@ import ReviewCard from "./ReviewCard.astro";
 import reviews from "@/data/reviews.json";
 ---
 
-<section id="reviews" class="py-20">
+<section id="reviews" class="py-20 ">
   <div class="container mx-auto px-4">
 
     <h2
-      class="text-4xl font-bold text-center text-gray-900 dark:text-white mb-12"
+      class=" glasstext-4xl font-bold text-center text-gray-900 dark:text-white mb-12"
       data-aos="fade-up"
     >
       Recommandations
