--- a/src/components/TechCards.astro
+++ b/src/components/TechCards.astro
@@ -46,7 +46,7 @@ const sizeClasses = {
   {
     categories.map((category, index) => (
       <div
-        class="card flex flex-col items-center justify-center p-6 bg-[--bg-light] dark:bg-[--bg-secondary-dark]"
+        class="card flex flex-col items-center justify-center p-6 glass"
         data-aos="fade-up"
         data-aos-delay={index * 200}
       >
