--- a/src/pages/certifications.astro
+++ b/src/pages/certifications.astro
@@ -1,6 +1,6 @@
 ---
 import CertificationCard from "@/components/CertificationCard.astro";
-import certifications from "@/data/certifications.json";
+import certifications from "../data/certifications.json";
 import "../styles/global.css";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Button from "@/components/Button.astro";
